--- a/example.html
+++ b/example.html
@@ -9,7 +9,7 @@
 <body>
 
 <div id="mcash-qr" class="mcash-wrapper">
-	<div class="mcashShortlink" data-shortlink-id="foo" data-shortlink-argstring="bar" data-static-prefix="/"></div>
+	<div class="mcash-shortlink" data-shortlink-id="foo" data-btn-alternate="" data-shortlink-argstring="bar" data-static-prefix="/"></div>
 </div>
 
 <script src="mcash.shortlink.js"></script>
