Simplified embed code and JS

--- a/example.html
+++ b/example.html
@@ -1,15 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>mcash.shortlink.js</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>mcash.shortlink.js</title>
 </head>
-
 <body>
 
-<div id="mcash-qr" class="mcash-wrapper">
-	<div class="mcash-shortlink" data-shortlink-id="foo" data-btn-alternate="mcash-green" data-qr-alternate="mcash-green" data-shortlink-argstring="bar" data-static-prefix="/"></div>
+<div class="mcash-shortlink" data-shortlink-id="foo" data-shortlink-argstring="bar" data-alternate="true" data-static-prefix="">
 </div>
 
 <script src="mcash.shortlink.js"></script>
