--- a/example.html
+++ b/example.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div class="mcash-shortlink" data-shortlink-id="foo" data-shortlink-argstring="bar" data-alternate="true">
+<div class="mcash-shortlink" data-shortlink-id="foo" data-shortlink-argstring="bar" data-alternate="true" data-mcash-lang="no">
 </div>
 
 <script src="mcash.shortlink.js"></script>
