Show three variations in example.

--- a/example.html
+++ b/example.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 
-<div class="mcash-shortlink" data-shortlink-id="foo" data-shortlink-argstring="bar" data-alternate="true" data-mcash-lang="no">
-</div>
+<div class="mcash-shortlink" data-shortlink-id="foo" data-shortlink-argstring="bar" data-alternate="true" data-mcash-lang="no"></div>
+<div class="mcash-shortlink" data-shortlink-id="moo" data-shortlink-argstring="far" data-alternate="false" data-mcash-lang="en"></div>
+<div class="mcash-shortlink" data-shortlink-id="boo" data-alternate="true"></div>
 
 <script src="mcash.shortlink.js"></script>
 <script>mCASH.displayQRorButton();</script>
